--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,20 @@
 image: alpine:3.8
 
-job:
+test:
   before_script:
     - apk add --no-cache alpine-sdk flex bison
   script:
     - make
     - make test
+
+pages:
+  before_script:
+    - apk add --no-cache doxygen ttf-freefont graphviz
+  script:
+    - make doc
+    - mv doc/html/ public/
+  artifacts:
+    paths:
+    - public
+  only:
+  - master
