--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ image: alpine:3.8
 test_clang:
   stage: test
   before_script:
-    - apk add --no-cache alpine-sdk flex bison
+    - apk add --no-cache alpine-sdk flex bison clang
   script:
     - make CC=clang
     - make CC=clang test
