--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ image: alpine:edge
 test_clang:
   stage: test
   before_script:
-    - apk add --no-cache alpine-sdk flex bison clang bats
+    - apk add --no-cache alpine-sdk flex bison clang bats mpc1-dev mpfr-dev
   script:
     - make CC=clang
     - make CC=clang test
@@ -11,7 +11,7 @@ test_clang:
 test_gcc:
   stage: test
   before_script:
-    - apk add --no-cache alpine-sdk flex bison gcc bats
+    - apk add --no-cache alpine-sdk flex bison gcc bats mpc1-dev mpfr-dev
   script:
     - make CC=gcc
     - make CC=gcc test
